--- a/docs/i18n/zh-Hans/docusaurus-theme-classic/navbar.json
+++ b/docs/i18n/zh-Hans/docusaurus-theme-classic/navbar.json
@@ -8,11 +8,11 @@
     "description": "The alt text of navbar logo"
   },
   "item.label.Tutorial": {
-    "message": "文档",
+    "message": "Tutorial",
     "description": "Navbar item with label Tutorial"
   },
   "item.label.Blog": {
-    "message": "博客",
+    "message": "Blog",
     "description": "Navbar item with label Blog"
   },
   "item.label.GitHub": {
