--- a/docs/i18n/en/docusaurus-plugin-content-docs/current.json
+++ b/docs/i18n/en/docusaurus-plugin-content-docs/current.json
@@ -5,6 +5,6 @@
   },
   "sidebar.tutorialSidebar.category.配置": {
     "message": "配置",
-    "description": "The label for category 配置 in sidebar tutorialSidebar"
+    "description": "The label for category '配置' in sidebar 'tutorialSidebar'"
   }
 }
