--- a/docs/i18n/en/docusaurus-plugin-content-docs/current/config/lua/_category_.json
+++ b/docs/i18n/en/docusaurus-plugin-content-docs/current/config/lua/_category_.json
@@ -1,8 +1,8 @@
 {
-  "label": "Lua 脚本",
+  "label": "Lua Scripts",
   "position": 4,
   "link": {
     "type": "generated-index",
-    "description": "Candy 的 Lua 脚本功能完全兼容 OpenResty API，提供强大的 HTTP 请求处理能力。"
+    "description": "Candy's Lua script functionality is fully compatible with OpenResty API, providing powerful HTTP request processing capabilities."
   }
 }
